--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Cozy Tea</title>
-    <link rel="stylesheet" href="/Resources/CSS/index.css">
+    <link rel="stylesheet" href="./Resources/CSS/index.css">
 </head>
 
 <header class="flexcontainer">
-    <img src="/Resources/IMG/1.png" alt="logo">
+    <img src="./Resources/IMG/1.png" alt="logo">
     <nav>
         <span><a href="#mission">Mission</a></span>
         <span><a href="#tea">Tea</a></span>
@@ -33,27 +33,27 @@
         <h3>Whats Steeping at The Tea Cozy?</h3>
         <div class="teaimg">
             <figure>
-            <img src="/Resources/IMG/3.jpg" alt="">
+            <img src="./Resources/IMG/3.jpg" alt="">
             <figcaption>Fall Berry Blitz Tea</figcaption>
             </figure>   
 
             <figure>
-            <img src="/Resources/IMG/4.jpg" alt="">
+            <img src="./Resources/IMG/4.jpg" alt="">
             <figcaption>Spiced Rum Tea</figcaption>
             </figure>
 
             <figure>
-            <img src="/Resources/IMG/5.jpg" alt="">
+            <img src="./Resources/IMG/5.jpg" alt="">
             <figcaption>Seasonal Donuts</figcaption>
             </figure>
 
             <figure>
-            <img src="/Resources/IMG/5.jpg" alt="">
+            <img src="./Resources/IMG/5.jpg" alt="">
             <figcaption>Myrtle Ave Tea</ficaption>
             </figure>
 
             <figure>
-            <img src="/Resources/IMG/6.jpg" alt="">
+            <img src="./Resources/IMG/6.jpg" alt="">
                 <figcaption>Bedford Bizarre Tea</figcaption>
             </figure>
         </div>
